--- a/package.json
+++ b/package.json
@@ -15,8 +15,12 @@
   "author": "zhangyi",
   "license": "ISC",
   "dependencies": {
+    "key-mirror": "^1.0.1",
     "react": "^15.6.1",
-    "react-dom": "^15.6.1"
+    "react-dom": "^15.6.1",
+    "react-redux": "^5.0.6",
+    "redux": "^3.7.2",
+    "redux-thunk": "^2.2.0"
   },
   "devDependencies": {
     "babel-core": "^6.26.0",
